--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.0",
+    "motion": "^12.4.7",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
