--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "geist": "^1.3.0",
     "motion": "^12.4.7",
     "next": "^15.0.1",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.25",
     "psql": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
